添加测试代码

--- a/index.html
+++ b/index.html
@@ -672,7 +672,7 @@
             });
         }
     }
-
+	DemoApp.showAlert(JSON.stringify(DemoApp.initData))
     const DemoAppMenu = {
         init() {
             DemoApp.init();
